# AutoRetroAb

./: .gitignore  README.md  environment.yml  pyproject.toml
resources/annotations/: L1.cleaned.gtf
resources/metadata/: herv_locus_metadata.tsv  l1_locus_metadata.tsv
scripts/: build_locus_metadata.py  chromosomal_distribution.R  downloader.py  extract_top_hits.R  family_enrichment.R  filter_counts.R  make_report.R  merge_telescope_counts.py  run_bowtie2_grouped.py  run_deseq2_generic.R
src/autoretroab/: cli.py
src/autoretroab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
workflow/: Snakefile
