[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoretroab"
version = "0.1.0"
description = "Automated retrotransposon RNA-seq pipeline for HERV and LINE-1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyyaml"
]

[project.scripts]
autoretroab = "autoretroab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
